syntax = "proto3";

package khiin.proto;

message KeyConfiguration {
    string telex_t2 = 1;
    string telex_t3 = 2;
    string telex_t5 = 3;
    string telex_t6 = 4;
    string telex_t7 = 5;
    string telex_t8 = 6;
    string telex_t9 = 7;
    string telex_khin = 8;
    string alt_hyphen = 9;
    string nasal = 10;
    string dot_above_right = 11;
    string dots_below = 12;
    bool enable_uppercase_nasal = 13;
    bool use_digits_as_fallback = 14;
}

enum InputMode {
    IM_ALPHA = 0;
    IM_CONTINUOUS = 1;
    IM_BASIC = 2;
    IM_PRO = 3;
}

enum UiLanguage {
    UIL_ENGLISH = 0;
    UIL_TAI_HANLO = 1;
    UIL_TAI_LOJI = 2;
}

message Appearance {
    int32 colors = 1;
    int32 size = 2;
    UiLanguage ui_language = 3;
}

message AppConfig {
    KeyConfiguration key_config = 1;
    InputMode input_mode = 2;
    Appearance appearance = 3;
}
